# url-shortener-analytics

./: .env.example  README.md  app.py  pyproject.toml  requirements.txt
src/: __init__.py  config.py  forms.py  models.py
src/static/css/: style.css
src/static/js/: main.js
src/templates/: analytics.html  base.html  index.html  short_url.html
src/views/: __init__.py  api.py  main.py
