[project]
name = "url-shortener"
version = "0.1.0"
description = "A URL Shortener with Analytics"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "Flask==2.3.3",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Migrate==4.0.5",
    "Flask-WTF==1.2.1",
    "python-dotenv==1.0.0",
    "shortuuid==1.0.11",
    "User-Agent==0.1.9", # Note: The package is `user-agents` but pip install requires `User-Agent`
    "gunicorn==21.2.0", # For production WSGI server
    "Werkzeug==2.3.8", # Explicitly pin if Flask dependencies change often
]
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
pythonpath = [".", "src"]
